# hoc-crawler

./: LICENSE  README.md  hoc_crawler.py  pyproject.toml
hoc_crawler/: __init__.py  all_equal.py  hoc_crawler.py  hoc_range.py
test/: test_crawl.py  test_hoc_range.py
