[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hoc_crawler"
authors = [{name = "Ricky L Teachey Jr", email = "ricky@teachey.org"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pint>=0.23",
]


[project.urls]
Home = "https://github.com/CBC-Engineers/hoc_crawler"

[project.optional-dependencies]
test = [
    "pytest >=7.4",
    "pint>=0.23",
]
